[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "skillfoundry"
version = "0.1.0"
description = "Codex-exec orchestration framework for SkillFoundry"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["skillfoundry*"]
