[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skillfoundry"
version = "0.1.0"
description = "Codex-exec orchestration framework for SkillFoundry"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["skillfoundry*"]
